# lob_simulator_core

./: .gitignore  README.md  animate_live.py  check_trace.py  lob_trace.csv  order_flow_models.py  plot_trace.py  pyproject.toml  run_simulation.py
lob_simulator_core/: __init__.py  animate_trace.py  lob_simulator.py  lob_trace_hawkes.csv  run_quick_demo.py  run_simulation.py
lob_simulator_core.egg-info/: PKG-INFO  top_level.txt
