[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lob_simulator_core"
version = "0.1.0"
description = "Limit Order Book Simulator core"
authors = [{ name = "Elliot Piet" }]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7"
]

[tool.setuptools]
packages = ["lob_simulator_core"]
